@@ -1,4 +1,4 @@
-/* $Id: thread.c,v 1.6 2003/07/11 21:58:09 royce Exp $
+/* $Id: thread.c,v 1.7 2003/07/16 02:45:24 royce Exp $
  *
  */
 #include <windows.h>
@@ -14,7 +14,7 @@ unsigned long _beginthread(
     unsigned stack_size,
     void* arglist)
 {
-    errno = ENOSYS;
+    __set_errno ( ENOSYS );
     return (unsigned long)-1;
 }
 
